deploy: 96c6455bb9fb0089d0708d3f06e41dee63acaa07

--- a/about-me/education.html
+++ b/about-me/education.html
@@ -156,6 +156,10 @@
 <h3 id="2018-2019-essec-business-school-msc-data-science--business-analytics"><a class="header" href="#2018-2019-essec-business-school-msc-data-science--business-analytics">2018-2019, ESSEC Business School, Msc Data Science &amp; Business Analytics</a></h3>
 <p>Double Major in Data Science and Business Strategy</p>
 <p>Awards:</p>
+<!-- blank line -->
+<figure class="video_container">
+  <iframe src="https://www.youtube.com/watch?v=M7GXZ3cjviM" frameborder="0" allowfullscreen="true"> </iframe>
+</figure>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=M7GXZ3cjviM">1st Place at I-COM Data Science Hackathon - Warner Bros. Challenge</a> </li>
 <li>2nd Place at Oliver Wyman Data Challenge on Paris Public Parking Pricing </li>
