deploy: 4f61ceffb318255ce8da08542f75347849282029

--- a/pandas-rust/010-reading.html
+++ b/pandas-rust/010-reading.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../about-me.html">About Me</a></li><li class="chapter-item expanded "><a href="../about-me/work.html"><strong aria-hidden="true">1.</strong> Work Experience</a></li><li class="chapter-item expanded "><a href="../about-me/education.html"><strong aria-hidden="true">2.</strong> Education</a></li><li class="chapter-item expanded "><a href="../about-me/skills.html"><strong aria-hidden="true">3.</strong> Skills</a></li><li class="chapter-item expanded affix "><li class="part-title">Latest Posts</li><li class="chapter-item expanded "><a href="../03-deep_learning_in_rust.html"><strong aria-hidden="true">4.</strong> 07.2020 - Deep Learning in Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../deep-learning/batch_inference.html"><strong aria-hidden="true">4.1.</strong> Batch Inference</a></li><li class="chapter-item expanded "><a href="../deep-learning/bert-server.html"><strong aria-hidden="true">4.2.</strong> Bert Server</a></li><li class="chapter-item expanded "><a href="../deep-learning/conclusion.html"><strong aria-hidden="true">4.3.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../02-polars-vs-rust.html"><strong aria-hidden="true">5.</strong> 04.2020 - Pandas vs Polars</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-polars/020-reading.html"><strong aria-hidden="true">5.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-polars/021-apply.html"><strong aria-hidden="true">5.2.</strong> Apply</a></li><li class="chapter-item expanded "><a href="../pandas-polars/22-merging.html"><strong aria-hidden="true">5.3.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-polars/23-groupby.html"><strong aria-hidden="true">5.4.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-polars/24-conculsion.html"><strong aria-hidden="true">5.5.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../01-pandas-vs-rust.html"><strong aria-hidden="true">6.</strong> 03.2020 - Pandas vs Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-rust/010-reading.html" class="active"><strong aria-hidden="true">6.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-rust/011-filtering.html"><strong aria-hidden="true">6.2.</strong> Filtering</a></li><li class="chapter-item expanded "><a href="../pandas-rust/012-groupby.html"><strong aria-hidden="true">6.3.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-rust/013-mutation.html"><strong aria-hidden="true">6.4.</strong> Mutation</a></li><li class="chapter-item expanded "><a href="../pandas-rust/014-merging.html"><strong aria-hidden="true">6.5.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-rust/15-conclusion.html"><strong aria-hidden="true">6.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../00-scraping.html"><strong aria-hidden="true">7.</strong> 02.2020 - Scraping Rust vs Python</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../about-me.html">About Me</a></li><li class="chapter-item expanded "><a href="../about-me/work.html"><strong aria-hidden="true">1.</strong> Work Experience</a></li><li class="chapter-item expanded "><a href="../about-me/education.html"><strong aria-hidden="true">2.</strong> Education</a></li><li class="chapter-item expanded "><a href="../about-me/skills.html"><strong aria-hidden="true">3.</strong> Skills</a></li><li class="chapter-item expanded affix "><li class="part-title">Latest Posts</li><li class="chapter-item expanded "><a href="../03-deep_learning_in_rust.html"><strong aria-hidden="true">4.</strong> 07.2020 - Deep Learning in Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../deep-learning/hardware.html"><strong aria-hidden="true">4.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="../deep-learning/preprocessing.html"><strong aria-hidden="true">4.2.</strong> preprocessing</a></li><li class="chapter-item expanded "><a href="../deep-learning/batch_inference.html"><strong aria-hidden="true">4.3.</strong> Batch Inference</a></li><li class="chapter-item expanded "><a href="../deep-learning/bert-server.html"><strong aria-hidden="true">4.4.</strong> Bert Server</a></li><li class="chapter-item expanded "><a href="../deep-learning/conclusion.html"><strong aria-hidden="true">4.5.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../02-polars-vs-rust.html"><strong aria-hidden="true">5.</strong> 04.2020 - Pandas vs Polars</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-polars/polars.html"><strong aria-hidden="true">5.1.</strong> Polars</a></li><li class="chapter-item expanded "><a href="../pandas-polars/020-reading.html"><strong aria-hidden="true">5.2.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-polars/021-apply.html"><strong aria-hidden="true">5.3.</strong> Apply</a></li><li class="chapter-item expanded "><a href="../pandas-polars/22-merging.html"><strong aria-hidden="true">5.4.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-polars/23-groupby.html"><strong aria-hidden="true">5.5.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-polars/24-conculsion.html"><strong aria-hidden="true">5.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../01-pandas-vs-rust.html"><strong aria-hidden="true">6.</strong> 03.2020 - Pandas vs Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-rust/010-reading.html" class="active"><strong aria-hidden="true">6.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-rust/011-filtering.html"><strong aria-hidden="true">6.2.</strong> Filtering</a></li><li class="chapter-item expanded "><a href="../pandas-rust/012-groupby.html"><strong aria-hidden="true">6.3.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-rust/013-mutation.html"><strong aria-hidden="true">6.4.</strong> Mutation</a></li><li class="chapter-item expanded "><a href="../pandas-rust/014-merging.html"><strong aria-hidden="true">6.5.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-rust/15-conclusion.html"><strong aria-hidden="true">6.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../00-scraping.html"><strong aria-hidden="true">7.</strong> 02.2020 - Scraping Rust vs Python</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../scraping/synchronous.html"><strong aria-hidden="true">7.1.</strong> Synchronous</a></li><li class="chapter-item expanded "><a href="../scraping/asynchronous.html"><strong aria-hidden="true">7.2.</strong> Asynchronous</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -145,25 +145,25 @@
                 <div id="content" class="content">
                     <main>
                         <h2 id="reading"><a class="header" href="#reading">Reading</a></h2>
-<h3 id="pandas"><a class="header" href="#pandas">[Pandas]</a></h3>
+<h3 id="pandas"><a class="header" href="#pandas">Pandas</a></h3>
 <p>Reading and instantiating Data in Pandas is pretty straightforward, and handles by default many data quality problems:</p>
 <pre><code class="language-python">import pandas as pd
 
 path = &quot;/home/peter/Documents/TEST/RUST/terrorism/src/globalterrorismdb_0718dist.csv&quot;
 df = pd.read_csv(path)
 </code></pre>
-<h3 id="rust-reading-csv"><a class="header" href="#rust-reading-csv">[Rust] Reading CSV</a></h3>
+<h3 id="rust-reading-csv"><a class="header" href="#rust-reading-csv">Rust Reading CSV</a></h3>
 <p>For Rust, Managing bad quality data is very very tedious. In this dataset, some fields are empty, some lines are badly formatted, and some are not UTF-8 encoded.</p>
 <p>To open the CSV, I used the <code>csv</code> crate but it does not solve all the issues listed above. With well-formatted data, reading can be done like so:</p>
-<pre><pre class="playground"><code class="language-rust">
+<pre><pre class="playground"><code class="language-rust edition2018">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
-</span>let path = &quot;/home/peter/Documents/TEST/RUST/terrorism/src/foo.csv&quot;
+</span>let path = &quot;/home/peter/Documents/TEST/RUST/terrorism/src/foo.csv&quot;;
 let mut rdr = csv::Reader::from_path(path).unwrap();
 <span class="boring">}
 </span></code></pre></pre>
 <p>But with bad quality formatting, mine looked like this:</p>
-<pre><pre class="playground"><code class="language-rust">
+<pre><pre class="playground"><code class="language-rust edition2018">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>use std::fs::File;    
@@ -182,12 +182,12 @@ use encoding_rs_io::DecodeReaderBytesBuilder;
 <span class="boring">}
 </span></code></pre></pre>
 <p><em>ref:</em> <a href="https://stackoverflow.com/questions/53826986/how-to-read-a-non-utf8-encoded-csv-file"><em>https://stackoverflow.com/questions/53826986/how-to-read-a-non-utf8-encoded-csv-file</em></a></p>
-<h3 id="rust-instantiating-the-data"><a class="header" href="#rust-instantiating-the-data">[Rust] Instantiating the data</a></h3>
+<h3 id="rust-instantiating-the-data"><a class="header" href="#rust-instantiating-the-data">Rust Instantiating the data</a></h3>
 <p>To instantiate the data, I used Serde <a href="https://serde.rs/">https://serde.rs/</a> for serializing and deserializing my data.</p>
 <p>To use Serde, I needed to make a struct of my data. But, having a struct of my data is great has it makes my code follow a model-based coding paradigm with a well-defined type for each field. It also enables me to implement traits and methods on top of them.</p>
 <p>However, the data I wanted to use has 130 columns… And, It seemed that there is no way to generate the definition of the struct automatically.</p>
 <p>To avoid doing the definition manually, I had to build my own struct generator:</p>
-<pre><pre class="playground"><code class="language-rust">
+<pre><pre class="playground"><code class="language-rust edition2018">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>fn inspect(path: &amp;str) {
@@ -232,7 +232,7 @@ use encoding_rs_io::DecodeReaderBytesBuilder;
 <span class="boring">}
 </span></code></pre></pre>
 <p>This generated the struct as follows:</p>
-<pre><pre class="playground"><code class="language-rust">
+<pre><pre class="playground"><code class="language-rust edition2018">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>use serde::{Deserialize, Serialize};
@@ -312,6 +312,11 @@ struct DataFrame {
             window.playground_copyable = true;
         </script>
         
+                <script src="../ace.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../editor.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../mode-rust.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../theme-dawn.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../theme-tomorrow_night.js" type="text/javascript" charset="utf-8"></script>
         
                 <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
