--- a/about-me/work.html
+++ b/about-me/work.html
@@ -146,22 +146,19 @@
                     <main>
                         <h1 id="work-experience"><a class="header" href="#work-experience">Work Experience</a></h1>
 <h4 id="data-engineer--central-bank-of-francediv-classrightdec-2020---nowdiv"><a class="header" href="#data-engineer--central-bank-of-francediv-classrightdec-2020---nowdiv">Data Engineer @ Central Bank of France<div class="right">Dec 2020 - Now</div></a></h4>
-<p>Worked on a automated checks of Bank loan using NER, NLP, and CV.</p>
+<p>Automating checks of Bank mortgage loans using NER, NLP, and CV.</p>
 <blockquote>
 <p><a href="https://events.linuxfoundation.org/lf-ai-data-day-eu-virtual/program/schedule/">🎤 Speaker at the Linux Foundation AI &amp; Data Days Europe on: Why ONNX Runtime Matters for Deploying AI in Institution.</a></p>
 </blockquote>
-<h4 id="researcher--inseediv-classrightsep-2020---dec-2020div"><a class="header" href="#researcher--inseediv-classrightsep-2020---dec-2020div">Researcher @ INSEE*<div class="right">Sep 2020 - Dec 2020</div></a></h4>
-<p>Built an experimental statistics of the present population in France at every hour for 3 months on a 100 meter grid based on mobile phone traffic data.</p>
+<h4 id="researcher--insee-national-institute-for-stats-and-econ-studiesdiv-classrightsep-2020---dec-2020div"><a class="header" href="#researcher--insee-national-institute-for-stats-and-econ-studiesdiv-classrightsep-2020---dec-2020div">Researcher @ INSEE: National Institute for Stats and Econ Studies<div class="right">Sep 2020 - Dec 2020</div></a></h4>
+<p>Measured population on a 100 meter grid of France at every hour based on mobile phone traffic data.</p>
 <blockquote>
 <p><a href="https://coms.events/NTTS2021/data/abstracts/en/abstract_0108.html">📃 Published a paper at NTTS 2021 on a novel approach for estimating population using Mobile Phone Data.</a></p>
 </blockquote>
-<h4 id="full-stack-engineer--independant-consultantdiv-classrightjan-2020---sep-2020div"><a class="header" href="#full-stack-engineer--independant-consultantdiv-classrightjan-2020---sep-2020div">Full Stack Engineer @ Independant Consultant<div class="right">Jan 2020 - Sep 2020</div></a></h4>
-<p>Empowered SMEs with Web Technologies.</p>
 <h4 id="data-scientist-intern--boston-consulting-groupdiv-classrightjuly-2019---dec-2019div"><a class="header" href="#data-scientist-intern--boston-consulting-groupdiv-classrightjuly-2019---dec-2019div">Data Scientist Intern @ Boston Consulting Group<div class="right">July 2019 - Dec 2019</div></a></h4>
 <p>Helped a large fashion retailer build a stocks optimizer for more than 100+ different markets.</p>
 <h4 id="data-scientist-intern--bnp-paribasdiv-classrightjuly-2017---july-2018div"><a class="header" href="#data-scientist-intern--bnp-paribasdiv-classrightjuly-2017---july-2018div">Data Scientist Intern @ BNP Paribas<div class="right">July 2017 - July 2018</div></a></h4>
 <p>Developed a corporate credit scoring and pricing algorithm leading to the lending of 100 millions € of unsecured loan for SME in the UK. </p>
-<p>*<em>INSEE: French national institute for statistical and economic studies</em></p>
 
                     </main>
 
