--- a/about-me.html
+++ b/about-me.html
@@ -150,13 +150,7 @@
 <p><a href="mailto:tao.xavier@outlook.com"><img src="https://img.shields.io/badge/tao.xavier@outlook.com-EA4335?logo=gmail&amp;logoColor=white" alt="Mail" /></a>
 <a href="https://www.linkedin.com/in/haixuan-xavier-tao-7460b1102/"><img src="https://img.shields.io/badge/Haixuan_Xavier_Tao-0077B5?logo=linkedin&amp;logoColor=white" alt="Linkedin" /></a>
 <a href="https://github.com/haixuanTao"><img src="https://img.shields.io/badge/HaixuanTao-fff?logo=github&amp;logoColor=black" alt="Github" /></a></p>
-<p>I'm trying to figure out whether Rust can be a replacement for Python Data Science work.</p>
-<pre><pre class="playground"><code class="language-rust edition2018">fn main() {
-	println!(&quot;get in touch 👋&quot;);
-<span class="boring">	println!(&quot;Mail me at:&quot;);
-</span><span class="boring">	println!(&quot;tao.xavier@outlook.com&quot;);
-</span>}
-</code></pre></pre>
+<p>Data Engineer belivieving in Rust for ML/IA engineering.</p>
 
                     </main>
 
