--- a/about-me/education.html
+++ b/about-me/education.html
@@ -145,8 +145,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="education"><a class="header" href="#education">Education</a></h1>
-<h3 id="ecole-centrale-paris-div-classright2015---2019div"><a class="header" href="#ecole-centrale-paris-div-classright2015---2019div">Ecole Centrale Paris <div class="right">2015 - 2019</div></a></h3>
-<h4 id="diplome-ingénieur-grande-ecole"><a class="header" href="#diplome-ingénieur-grande-ecole">Diplome Ingénieur Grande Ecole</a></h4>
+<h3 id="ecole-centrale-paris-centralesupelec-engineering-degree-div-classright2015---2019div"><a class="header" href="#ecole-centrale-paris-centralesupelec-engineering-degree-div-classright2015---2019div">Ecole Centrale Paris (CentraleSupelec), Engineering Degree <div class="right">2015 - 2019</div></a></h3>
 <p>Majored in Applied Mathematics</p>
 <p>Awards:</p>
 <ul>
@@ -154,8 +153,7 @@
 <li>2nd Place at BCG Gamma Data Challenge on Preventive Health Care Measure Optimization</li>
 <li>1st Place with a 1500€ award at Schlumberger Hackathon on deep learning applied to Lithology</li>
 </ul>
-<h3 id="essec-business-school-div-classright2018---2019div"><a class="header" href="#essec-business-school-div-classright2018---2019div">ESSEC Business School <div class="right">2018 - 2019</div></a></h3>
-<h4 id="msc-data-science--business-analytics"><a class="header" href="#msc-data-science--business-analytics">Msc Data Science &amp; Business Analytics</a></h4>
+<h3 id="essec-business-school-msc-data-science--business-analyticsdiv-classright2018---2019div"><a class="header" href="#essec-business-school-msc-data-science--business-analyticsdiv-classright2018---2019div">ESSEC Business School, Msc Data Science &amp; Business Analytics<div class="right">2018 - 2019</div></a></h3>
 <p>Double Major in Data Science and Business Strategy</p>
 <p>Awards:</p>
 <ul>
