deploy: c655bb02f19399444154f2c1003f32bd58526e3c

--- a/deep-learning/bert-server.html
+++ b/deep-learning/bert-server.html
@@ -154,9 +154,9 @@
 <tr><td>Mean Latency</td><td>12.8ms</td><td>10.4ms</td><td>-20%⏰</td></tr>
 <tr><td>Requests/secs</td><td>77.5 #/s</td><td>95 #/s</td><td>+22%🍾</td></tr>
 </tbody></table>
-<p><strong>The gain in performance comes from moving from considered “Fast” Python library to Rust: FastAPI -&gt; Actix Web, BertokenizerFast -&gt; Rust Tokenizer.</strong></p>
-<p><strong>Thus, as Rust libraries tend to be faster than Python ones, the more functionalities you will have, the more speedup you’re going to see with Rust when serving Deep Learning.</strong></p>
-<p><strong>That’s why, for performance-centric Deep Learning applications such as Real-Time Deep Learning, Embedded Deep Learning, Large-Scale AI servers …. I can definitely see Rust be a good fit!</strong> ❤️‍🦀</p>
+<p>The gain in performance comes from moving from considered “Fast” Python library to Rust: FastAPI -&gt; Actix Web, BertokenizerFast -&gt; Rust Tokenizer.</p>
+<p>Thus, as Rust libraries tend to be faster than Python ones, the more functionalities you will have, the more speedup you’re going to see with Rust when serving Deep Learning.</p>
+<p>That’s why, for performance-centric Deep Learning applications such as Real-Time Deep Learning, Embedded Deep Learning, Large-Scale AI servers …. I can definitely see Rust be a good fit! ❤️‍🦀</p>
 <p><em>Git:</em> <a href="https://github.com/haixuanTao/bert-onnx-rs-server"><em>https://github.com/haixuanTao/bert-onnx-rs-server</em></a><br />
 <a href="https://github.com/haixuantao/bert-onnx-rs-pipeline"><img alt="github" src="https://img.shields.io/badge/bert--onnx--rs--pipeline-fff?labelColor=000&logo=github" height="20"></a>
 <a href="https://github.com/haixuanTao/bert-onnx-rs-pipeline/"><img src="https://img.shields.io/github/stars/haixuanTao/bert-onnx-rs-pipeline?style=social&amp;label=Star&amp;maxAge=2592000" alt="GitHub stars" /></a></p>
