--- a/deep-learning/batch_inference.html
+++ b/deep-learning/batch_inference.html
@@ -145,7 +145,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2 id="batch-inference-running-bert-on-10k-phrases"><a class="header" href="#batch-inference-running-bert-on-10k-phrases">Batch inference: Running BERT on 10k phrases.	</a></h2>
-<p>At work, we often have situation where we develop a Deep Learning model, and then use it on large batches of data.</p>
+<p>At work, we often have situations where we develop a Deep Learning model, and then use it on large batches of data.</p>
 <p>To see if this could be done with Rust, I have customed trained a BERT model and tried to do the inference 10 thousand phrases.</p>
 <h3 id="profiling"><a class="header" href="#profiling">Profiling</a></h3>
 <table><thead><tr><th>10k phrases</th><th>Python</th><th>Rust</th></tr></thead><tbody>
@@ -155,7 +155,7 @@
 <tr><td>Total time</td><td>80s</td><td>76s</td></tr>
 <tr><td>Memory usage</td><td>1 GiB</td><td>0.7 GiB</td></tr>
 </tbody></table>
-<p><strong>As DL inference is taking the majority of the time, Rust will not increase performance and I would not bother with Rust and stay with Python for large batches of inference.</strong>   👍🐍</p>
+<p>As DL inference is taking the majority of the time, Rust will not increase performance and I would not bother with Rust and stay with Python for large batches of inference.  👍🐍</p>
 <p><em>Git:</em>  <a href="https://github.com/haixuanTao/bert-onnx-rs-pipeline"><em>https://github.com/haixuanTao/bert-onnx-rs-pipeline</em></a></p>
 <p><a href="https://github.com/haixuantao/bert-onnx-rs-server"><img alt="github" src="https://img.shields.io/badge/bert--onnx--rs--server-fff?labelColor=000&logo=github" height="20"></a>
 <a href="https://github.com/haixuanTao/bert-onnx-rs-server/"><img src="https://img.shields.io/github/stars/haixuanTao/bert-onnx-rs-server?style=social&amp;label=Star&amp;maxAge=2592000" alt="GitHub stars" /></a></p>
