--- a/03-deep_learning_in_rust.html
+++ b/03-deep_learning_in_rust.html
@@ -149,11 +149,11 @@
 <a href="https://github.com/haixuantao/onnxruntime-rs/actions?query=branch%3Amaster"><img alt="build status" src="https://img.shields.io/github/workflow/status/haixuantao/onnxruntime-rs/Rust/master?" height="20"></a>
 <a href="https://github.com/haixuanTao/onnxruntime-rs/"><img src="https://img.shields.io/github/stars/haixuanTao/onnxruntime-rs?style=social&amp;label=Star&amp;maxAge=2592000" alt="GitHub stars" /></a></p>
 <h2 id="introduction"><a class="header" href="#introduction">Introduction</a></h2>
-<p>Building Deep Learning algorithms is paramount for doing Data Science in Rust. In this post, I wanted to know:</p>
+<p>Building Deep Learning algorithms is paramount for doing Data Science in Rust. In this post, I show how:</p>
 <ul>
-<li>If Rust can support GPU.</li>
-<li>If Rust can provide superior performance than Python and by how much.</li>
-<li>If Rust is viable for real DL work.</li>
+<li>Rust can support GPU.</li>
+<li>Rust can provide superior performance than Python and by how much.</li>
+<li>Rust good and bad use case for Deep Learning.</li>
 </ul>
 <h2 id="state-of-the-art-of-deep-learning-in-rust"><a class="header" href="#state-of-the-art-of-deep-learning-in-rust">State of the art of Deep Learning in Rust</a></h2>
 <p>Deep Learning in the Rust ecosystem is spread between native libraries like <a href="https://github.com/rust-ml/linfa">linfa</a> and C++ binding of common libraries like <a href="https://github.com/tensorflow/rust">Tensorflow</a>, <a href="https://github.com/LaurentMazare/tch-rs">Pytorch</a> and <a href="https://github.com/nbigaouette/onnxruntime-rs">Onnxruntime</a>.</p>
