--- a/deep-learning/hardware.html
+++ b/deep-learning/hardware.html
@@ -149,11 +149,10 @@
 <p>But by tweaking <a href="https://github.com/nbigaouette/onnxruntime-rs">Onnxruntime-rs</a>, I could use the GPU C API and run DL Inference on GPU. </p>
 <p>I opened a PR: <a href="https://github.com/nbigaouette/onnxruntime-rs/pull/87">https://github.com/nbigaouette/onnxruntime-rs/pull/87</a> providing the CUDA support for Linux and Windows.</p>
 <p>And with similar work, a majority of the acceleration hardware could be added actually.</p>
-<p>➡️ So, yes, Rust can run DL on GPU!</p>
 <h2 id="gpu-support"><a class="header" href="#gpu-support">GPU Support</a></h2>
-<p>GPU Support was enabled by:</p>
+<p>To enable GPU support, I had to:</p>
 <ul>
-<li>adding 2 header files in bindgen's <code>wrapper.h</code> file as follows: </li>
+<li>add 2 header files in bindgen's <code>wrapper.h</code> file as follows: </li>
 </ul>
 <pre><code class="language-c">#include &quot;onnxruntime_c_api.h&quot;
 #if !defined(__APPLE__)
@@ -162,7 +161,13 @@
 #endif
 </code></pre>
 <ul>
-<li>adding a safe API to the newly added bindings:</li>
+<li>Add a feature flag:</li>
+</ul>
+<pre><code class="language-toml">[build-dependencies]
+cuda = []
+</code></pre>
+<ul>
+<li>add a safe API to the newly added bindings:</li>
 </ul>
 <pre><pre class="playground"><code class="language-rust edition2018">
 <span class="boring">#![allow(unused)]
@@ -187,15 +192,37 @@
 <span class="boring">}
 </span></code></pre></pre>
 <ul>
-<li>Generating the binding for Linux:</li>
+<li>Generate bindings for Linux:</li>
 </ul>
 <pre><code class="language-bash">&gt;&gt;&gt; cargo build --package onnxruntime-sys --features &quot;generate-bindings cuda&quot; --target x86_64-unknown-linux-gnu
 </code></pre>
 <ul>
-<li>And, generating the bindings for Windows in a Windows VM:</li>
+<li>Generate bindings for Windows through a Windows VM:</li>
 </ul>
 <pre><code class="language-bash">&gt;&gt;&gt; cargo build --features &quot;generate-bindings cuda&quot; --target x86_64-pc-windows-msvc
 </code></pre>
+<ul>
+<li>Modify github CI for autonomous build test:</li>
+</ul>
+<pre><code class="language-yaml">      - name: Download prebuilt archive (GPU, x86_64-unknown-linux-gnu)
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --target x86_64-unknown-linux-gnu --features cuda
+      - name: Verify prebuilt archive downloaded (GPU, x86_64-unknown-linux-gnu)
+        run: ls -lh target/x86_64-unknown-linux-gnu/debug/build/onnxruntime-sys-*/out/onnxruntime-linux-x64-gpu-1.*.tgz
+      # ******************************************************************
+      - name: Download prebuilt archive (GPU, x86_64-pc-windows-msvc)
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --target x86_64-pc-windows-msvc --features cuda
+      - name: Verify prebuilt archive downloaded (GPU, x86_64-pc-windows-msvc)
+        run: ls -lh target/x86_64-pc-windows-msvc/debug/build/onnxruntime-sys-*/out/onnxruntime-win-gpu-x64-1.*.zip
+</code></pre>
+<ul>
+<li>As well as documentation.</li>
+</ul>
 <h2 id="performance"><a class="header" href="#performance">Performance</a></h2>
 <table><thead><tr><th></th><th>Time per phrase</th><th>Speedup</th></tr></thead><tbody>
 <tr><td>Rust ONNX CPU</td><td>~125ms</td><td></td></tr>
